--- a/icingaexchange.yml
+++ b/icingaexchange.yml
@@ -5,7 +5,7 @@ tags: STE,Poseidon,WLD
 vendor: HWgroup,NETWAYS
 target: Temperature,Hardware
 type: Plugin
-license: gplv2
+license: GPLv2+
 releases: 
   - 
     name: 1.0
