--- a/.pylintrc
+++ b/.pylintrc
@@ -13,6 +13,7 @@ disable=fixme,
         missing-function-docstring,
         missing-module-docstring,
         redefined-outer-name,
+        too-many-instance-attributes,
         too-many-arguments,
         too-many-branches,
         too-many-locals,
